--- a/www/styles.css
+++ b/www/styles.css
@@ -403,8 +403,9 @@ figure img.imgAside:hover
     margin-right: auto;
 }
 
-menu.birdFilter
+#birdFilter
 {
+    padding: 0;
     border-style: solid;
     border-width: 1px;
     border-radius: 15px;
@@ -414,6 +415,33 @@ menu.birdFilter
 }
 
 .menuPart {
+    text-align: left;
+    padding-left: 1%;
+    padding-right: 1%;
+    display: inline-block;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 5px;
+    border-top: none;
+    border-bottom: none;
+    border-color: slategray;
+}
+
+output {
+    display: block;
+    text-align: left;
+    padding: 1%;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 15px;
+    border-top: none;
+    border-bottom: none;
+    border-color: slategray;
+}
+
+.birdCard {
+    display: inline-block;
+    padding: 10px;
     border-style: solid;
     border-width: 1px;
     border-radius: 5px;
