--- a/www/styles.css
+++ b/www/styles.css
@@ -428,8 +428,7 @@ figure img.imgAside:hover
 
 output {
     display: block;
-    text-align: left;
-    padding: 1%;
+    padding: 0.5%;
     border-style: solid;
     border-width: 1px;
     border-radius: 15px;
@@ -440,12 +439,14 @@ output {
 
 .birdCard {
     display: inline-block;
-    padding: 10px;
+    padding: 5px;
+    text-align: left;
     border-style: solid;
     border-width: 1px;
     border-radius: 5px;
     border-color: slategray;
     vertical-align: top;
+    margin-bottom: 4px;
 }
 
 .birdCard h4 {
