--- a/www/styles.css
+++ b/www/styles.css
@@ -480,7 +480,7 @@ output {
     border: 1px outset buttonborder;
     border-radius: 3px;
     text-decoration: none;
-    margin-left: 3px;
+    margin-right: 3px;
     font-size: 11pt;
 }
 
@@ -500,7 +500,10 @@ output {
 details {
     font-size: 11pt;
     display: inline-block;
-    margin-left: 2px;
+}
+
+details[open] {
+    display: block;
 }
 
 details p {
@@ -519,6 +522,21 @@ details p {
     border-bottom: none;
     border-right: none;
     border-color: slategray;
+}
+
+summary {
+    display: inline-block;
+    color: buttontext;
+    background-color: buttonface;
+    padding-left: 3px;
+    padding-right: 3px;
+    padding-top: 0px;
+    padding-bottom 1px;
+    border: 1px outset buttonborder;
+    border-radius: 3px;
+    text-decoration: none;
+    margin-right: 3px;
+    font-size: 11pt;
 }
 
 details div {
