--- a/www/styles.css
+++ b/www/styles.css
@@ -471,6 +471,10 @@ output {
     font-size: 11pt;
 }
 
+#clearButton:hover {
+    background-color: #d9d9d9;
+}
+
 #notFound {
     padding: 5px;
     text-align: center;
@@ -539,6 +543,10 @@ output {
     font-size: 11pt;
 }
 
+.birdLink:hover {
+    background-color: #d9d9d9;
+}
+
 .singleBlock {
     display: block;
 }
@@ -600,6 +608,10 @@ summary {
     text-decoration: none;
     margin-right: 3px;
     font-size: 11pt;
+}
+
+summary:hover {
+    background-color: #d9d9d9;
 }
 
 details div {
